--- a/index.html
+++ b/index.html
@@ -4,11 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
     <title>Snake game</title>
 </head>
 <body>
-    <canvas id="snake" width="512" height="512" ></canvas>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 offset-lg-2"><h1 id="title">Snake Game!</h1></div>
+            <div class="col-lg-2">
+                <h4>Level</h4>
+                <span id="levelNumber" class="h5">1</span>
+            </div>
+            <div class="col-lg-2 text-end">
+                <h4>Score</h4>
+                <span id="placarNumber" class="h5">0</span>
+            </div>
+
+
+        </div>
+        <div class="row">
+            <div class="col-lg-8 offset-lg-2">
+                <canvas id="snake" width="768" height="768" class="w-100"></canvas>
+                <button id="playGame" class="btn btn-lg btn-primary">Começar jogo</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
